--- a/ts/demo/package.json
+++ b/ts/demo/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "eslint": "^4.10.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-load-plugins": "^1.5.0",
